# Meeting-Notes-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: main.py
app/core/: config.py
app/schemas/: decisions.py  meeting_pack.py  summarize.py  usage.py
app/services/: action_extractor.py  azure_llm.py  decision_extractor.py  ingest.py  llm_client.py  ocr.py  summarizer.py  usage_db.py  usage_metrics.py  validators.py
app/services/ocr/: azure_doc_intel.py
app/templates/: index.html
scripts/: azure_smoke_test.py
